--- a/css/index/styles.css
+++ b/css/index/styles.css
@@ -47,7 +47,7 @@ body {
     height: 100%;
     border-radius: 10px;
     width: 90%;
-    background-color: white;
+    background-color: beige;
     
 }
 
